--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,15 @@
 
 {% block main%}
 <p> Some content on the about page!</p>
-<form action="post">
+<form action="/about" method="post">
     {{ form.csrf_token() }}
+    {{ form.title.label }}
+    {{ form.title }}
+    {{ form.submit }}
 </form>
+
+{% if title %}
+    <h1>{{ title }}</h1>
+{% endif %}
+
 {% endblock%}
